Closed Bug 97219 Opened 23 years ago Closed 23 years ago

win32 installer is no longer automatable

Categories

(SeaMonkey :: Installer, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: ssu0262, Assigned: ssu0262)

Details

Attachments

(1 file)

The installer now gets stuck on the new Quick Launch dialog when the -ma 
parameter is passed to it.

trivial patch coming up.
r=syd
rs=mscott
a=asa on behalf of drivers.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
patch checked in.

how to verify:
1) run: n6setup.exe -ma
(or mozilla-win32-installer.exe -ma)

it should not show the Quick Launch dialog, but rather install the browser and 
launch it at the end without any user intervention.
verified build 2001090505
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: