fixing bug 97219 - win32 installer is no longer automatable. r=syd sr=mscott a=drivers@mozilla.org.  affects win32 platforms only.